--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     />
     <meta
       property="og:image"
-      content="https://ulems.my.id/assets/images/bg.webp"
+      content="https://undangan-web-three.vercel.app/assets/images/bg.webp"
     />
     <meta
       property="og:image:secure_url"
-      content="https://ulems.my.id/assets/images/bg.webp"
+      content="https://undangan-web-three.vercel.app/assets/images/bg.webp"
     />
     <meta property="og:image:type" content="image/webp" />
     <meta
@@ -54,7 +54,7 @@
     <meta property="og:image:height" content="980" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="id_ID" />
-    <meta property="og:url" content="https://ulems.my.id" />
+    <meta property="og:url" content="https://undangan-web-three.vercel.app" />
     <meta
       property="og:site_name"
       content="Website Undangan Pernikahan Herlytama dan Herlin Secara Online"
@@ -72,21 +72,21 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <link rel="canonical" href="https://ulems.my.id/" />
+    <link rel="canonical" href="https://undangan-web-three.vercel.app" />
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="https://ulems.my.id/assets/favicon.ico"
+      href="https://undangan-web-three.vercel.app/assets/favicon.ico"
     />
     <link
       rel="apple-touch-icon"
       sizes="192x192"
-      href="https://ulems.my.id/assets/images/icon-192x192.png"
+      href="https://undangan-web-three.vercel.app/assets/images/icon-192x192.png"
     />
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://ulems.my.id/assets/favicon.ico"
+      href="https://undangan-web-three.vercel.app/assets/favicon.ico"
     />
 
     <!-- Preconnect CDN -->
@@ -194,8 +194,6 @@
   <!-- Recommend use 'data-src' in img tag -->
 
   <body
-    data-key="4d63804085c947b31051f3f5cf575b5ea19fdf494fb8b04252"
-    data-url="http:localhost:8000"
     data-audio="./assets/music/pure-love-304010.mp3"
     data-confetti="true"
     data-time="2025-06-27 09:00:00"
