change: delete comment section#

--- a/index.html
+++ b/index.html
@@ -770,134 +770,8 @@
           </svg>
 
           <!-- Comment -->
-          <section class="bg-light-dark my-0 pb-0 pt-3" id="comment">
-            <div class="container">
-              <div class="border rounded-5 shadow p-3 mb-2">
-                <h2 class="text-center mt-2 mb-4" style="font-size: 2.25rem">
-                  Ucapan &amp; Doa
-                </h2>
-
-                <div class="mb-3">
-                  <label for="form-name" class="form-label my-1"
-                    ><i class="fa-solid fa-person me-2"></i>Nama</label
-                  >
-                  <input
-                    type="text"
-                    class="form-control shadow-sm rounded-4"
-                    id="form-name"
-                    minlength="2"
-                    maxlength="50"
-                    placeholder="Isikan Nama Anda"
-                    autocomplete="name"
-                    data-offline-disabled="false"
-                  />
-                </div>
-
-                <div class="mb-3">
-                  <label for="form-presence" class="form-label my-1"
-                    ><i class="fa-solid fa-person-circle-question me-2"></i
-                    >Presensi</label
-                  >
-                  <select
-                    class="form-select shadow-sm rounded-4"
-                    id="form-presence"
-                    autocomplete="off"
-                    data-offline-disabled="false"
-                  >
-                    <option value="0" selected>Konfirmasi Presensi</option>
-                    <option value="1">&#9989; Datang</option>
-                    <option value="2">&#10060; Berhalangan</option>
-                  </select>
-                </div>
-
-                <div class="d-block mb-3" id="comment-form-default">
-                  <div
-                    id="information"
-                    class="alert alert-info alert-dismissible fade show rounded-4"
-                    role="alert"
-                  >
-                    <button
-                      type="button"
-                      class="btn-close rounded-4 p-3"
-                      data-bs-dismiss="alert"
-                      aria-label="Close"
-                      onclick="undangan.guest.closeInformation()"
-                    ></button>
-
-                    <p style="font-size: 1.5rem">Bestieee!!!</p>
-                    <p class="m-0">
-                      Cobain like seperti Instagram, dengan tap tap bagian
-                      komentarnya
-                    </p>
-                    <hr class="my-2" />
-                    <p class="m-0">
-                      Sama bisa format text seperti Whatsapp lohh... cobainn
-                      jugaaa, makaciwww bestieee
-                    </p>
-                  </div>
-
-                  <label for="form-comment" class="form-label my-1"
-                    ><i class="fa-solid fa-comment me-2"></i>Ucapan &amp;
-                    Doa</label
-                  >
-                  <div class="position-relative">
-                    <button
-                      class="btn btn-secondary btn-sm rounded-4 shadow-sm me-1 my-1 position-absolute bottom-0 end-0"
-                      onclick="undangan.comment.gif.open(undangan.comment.gif.default)"
-                      aria-label="button gif"
-                      data-offline-disabled="false"
-                    >
-                      <i class="fa-solid fa-photo-film"></i>
-                    </button>
-                    <textarea
-                      class="form-control shadow-sm rounded-4"
-                      id="form-comment"
-                      rows="4"
-                      minlength="1"
-                      maxlength="1000"
-                      placeholder="Tulis Ucapan dan Doa"
-                      autocomplete="off"
-                      data-offline-disabled="false"
-                    ></textarea>
-                  </div>
-                </div>
-
-                <div class="d-none mb-3" id="gif-form-default"></div>
-
-                <div class="d-grid">
-                  <button
-                    class="btn btn-primary btn-sm rounded-4 shadow m-1"
-                    onclick="undangan.comment.send(this)"
-                    data-offline-disabled="false"
-                  >
-                    <i class="fa-solid fa-paper-plane me-2"></i>Send
-                  </button>
-                </div>
-              </div>
-
-              <!-- Comments -->
-              <div class="py-3" id="comments" data-loading="false"></div>
-
-              <!-- Pagination -->
-              <nav
-                class="d-flex d-none justify-content-center mt-1 mb-0"
-                id="pagination"
-              ></nav>
-            </div>
-          </section>
 
           <!-- Wave Separator -->
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 1440 320"
-            class="color-theme-svg no-gap-bottom"
-          >
-            <path
-              fill="currentColor"
-              fill-opacity="1"
-              d="M0,224L34.3,234.7C68.6,245,137,267,206,266.7C274.3,267,343,245,411,234.7C480,224,549,224,617,213.3C685.7,203,754,181,823,197.3C891.4,213,960,267,1029,266.7C1097.1,267,1166,213,1234,192C1302.9,171,1371,181,1406,186.7L1440,192L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
-            ></path>
-          </svg>
 
           <!-- End Of Invitation -->
           <section class="bg-white-black py-2 no-gap-bottom">
@@ -922,22 +796,14 @@
                 <div class="col-auto">
                   <small
                     >Build with<i class="fa-solid fa-heart mx-1"></i
-                    >Dewanakl</small
+                    >Kazumi</small
                   >
                 </div>
                 <div class="col-auto">
                   <small
                     ><i class="fa-brands fa-github me-1"></i
-                    ><a
-                      target="_blank"
-                      href="https://github.com/dewanakl/undangan"
+                    ><a target="_blank" href="https://github.com/yudhistiaR"
                       >github</a
-                    ></small
-                  >
-                  <small
-                    ><i class="fa-solid fa-chart-simple me-1"></i
-                    ><a target="_blank" href="https://status.ulems.my.id"
-                      >status</a
                     ></small
                   >
                   <small
@@ -1097,7 +963,7 @@
         <div class="d-flex flex-column">
           <small class="text-secondary">from</small>
           <small class="text-theme-auto"
-            ><i class="fa-brands fa-github me-1"></i>dewanakl</small
+            ><i class="fa-brands fa-github me-1"></i>Kazumi</small
           >
         </div>
       </div>
