change: og image share

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     />
     <meta
       property="og:image"
-      content="https://undangan-web-three.vercel.app/assets/images/bg.webp"
+      content="https://undangan-web-three.vercel.app/assets/images/bg_1.webp"
     />
     <meta
       property="og:image:secure_url"
-      content="https://undangan-web-three.vercel.app/assets/images/bg.webp"
+      content="https://undangan-web-three.vercel.app/assets/images/bg_1.webp"
     />
     <meta property="og:image:type" content="image/webp" />
     <meta
