fix: og image share link

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <meta property="og:description" content="Website Undangan Pernikahan Herlytama dan Herlin Secara Online" />
   <meta property="og:keywords"
     content="undangan, wedding, undangan digital, undangan online, wedding invitation, template undangan, template undangan pernikahan, undangan pernikahan, template undangan online, wedding invitation github, template website, template website undangan pernikahan" />
-  <meta property="og:image" content="https://undangan-web-three.vercel.app/assets/images/bg_1.webp" />
-  <meta property="og:image:secure_url" content="https://undangan-web-three.vercel.app/assets/images/bg_1.webp" />
+  <meta property="og:image" content="https://undangan-web-three.vercel.app/assets/images/image_8.webp" />
+  <meta property="og:image:secure_url" content="https://undangan-web-three.vercel.app/assets/images/image_8.webp" />
   <meta property="og:image:type" content="image/webp" />
   <meta property="og:image:alt" content="Website Undangan Pernikahan Herlytama dan Herlin Secara Online" />
   <meta property="og:image:width" content="980" />
