--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               style="background-color: unset"
             >
               <h1 class="pt-5 pb-4 fw-medium" style="font-size: 2.25rem">
-                Undangan Pernikahan
+                Syukuran Pernikahan
               </h1>
 
               <img
@@ -624,6 +624,9 @@
                   <h2 class="m-0 py-2" style="font-size: 2rem">
                     Syukuran Pernikahan
                   </h2>
+                  <p class="py-2" style="font-size: 1rem">
+                    Sabtu, 16 Agustus 2025
+                  </p>
                   <p style="font-size: 0.95rem">Pukul 10.00 WIB - 14.00 WIB</p>
                 </div>
               </div>
